--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
 		"axios": "^1.4.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"styled-components": "^6.0.6"
+		"styled-components": "^6.0.6",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
+		"@types/uuid": "^9.0.2",
 		"@typescript-eslint/eslint-plugin": "^6.2.1",
 		"@typescript-eslint/parser": "^6.2.1",
 		"@vitejs/plugin-react": "^4.0.3",
